--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon/components";
         href="#services"
         class="flex gap-1 items-center justify-center border border-green-600 text-green-600 px-4 py-2 rounded"
         target="_self">
-        <Icon class="text-green-600 w-4 h-4" name="bx:bxl-services" />
+        <Icon class="text-green-600 w-4 h-4" name="bx:bxl-briefcase" />
          Our Services
       </Link>
     </div>
