--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -19,7 +19,7 @@ const features = [
     title: "Experienced Team",
     description:
       "With over 10 years of experience, we guarantee quality workmanship and timely project completion.",
-    icon: "bx:bxs-hard-hat",
+    icon: "bx:bx-hard-hat",
   },
   {
     title: "Reliable & Trusted",
