--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,7 +25,7 @@ const aboutDescription = `
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-gray-800">Joaquin Gutierrez/h2>
+          <h2 class="text-lg text-gray-800">Joaquin Gutierrez</h2>
           <h3 class="text-sm text-slate-500">Founder & CEO</h3>
         </div>
       </div>
