--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,4 +1,9 @@
 ---
+---
+import Layout from "@layouts/Layout.astro";
+import Container from "@components/container.astro";
+
+
 export const projects = [
   {
     title: "Modern Backyard Fencing",
