--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -20,6 +20,10 @@ const menuitems = [
     path: "/pricing",
   },
   {
+  title: "Projects",
+  path: "/projects",
+  },
+  {
     title: "About",
     path: "/about",
   },
