--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -15,10 +15,10 @@ const menuitems = [
       { title: "404 Page", path: "/404" },
     ],
   },
-  {
-    title: "Pricing",
-    path: "/pricing",
-  },
+  // {
+  //  title: "Pricing",
+  //  path: "/pricing",
+  // },
   {
   title: "Projects",
   path: "/projects",
@@ -27,19 +27,19 @@ const menuitems = [
     title: "About",
     path: "/about",
   },
-  {
-    title: "Blog",
-    path: "/blog",
-  },
+ // {
+ //   title: "Blog",
+ //   path: "/blog",
+ // },
   {
     title: "Contact",
     path: "/contact",
   },
-  {
-    title: "Pro Version",
-    badge: true,
-    path: "https://astroship-pro.web3templates.com/",
-  },
+  // {
+  //  title: "Pro Version",
+  //  badge: true,
+  //  path: "https://astroship-pro.web3templates.com/",
+  // },
 ];
 ---
 
