--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -27,6 +27,10 @@ const menuitems = [
     title: "About",
     path: "/about",
   },
+  {
+    title: "Services",
+    path: "/services",
+  },
  // {
  //   title: "Blog",
  //   path: "/blog",
