--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -28,6 +28,10 @@ const menuitems = [
     path: "/about",
   },
   {
+    title: "Testimonials",
+    path: "/testimonial",
+  },
+  {
     title: "Services",
     path: "/services",
   },
