--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -25,7 +25,7 @@ import Link from "@components/ui/link.astro";
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#contact"
-        class="bg-green-700 text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-green-800 transition duration-300">
+        class="bg-primary text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-green-800 transition duration-300">
         Request a Quote
       </Link>
       <Link
