--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -61,7 +61,7 @@ const menuitems = [
           >
         </a>
         <div class="block lg:hidden">
-          <MenuIcon class="w-4 h-4 text-gray-800" />
+          <MenuIcon class="w-4 h-4 text-secondary" />
         </div>
       </div>
       <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
