--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,7 @@ const aboutDescription = `
     <Sectionhead title="About Us" subtitle="Professional Construction & Landscaping Services" />
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
-      <h2 class="font-bold text-3xl text-gray-800">
+      <h2 class="font-bold text-3xl text-secondary">
         Our Mission
       </h2>
       <p class="text-lg leading-relaxed text-slate-500">
@@ -25,19 +25,19 @@ const aboutDescription = `
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-gray-800">Joaquin Gutierrez</h2>
+          <h2 class="text-lg text-secondary">Joaquin Gutierrez</h2>
           <h3 class="text-sm text-slate-500">Founder & CEO</h3>
         </div>
       </div>
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-gray-800">Samuel Safahi</h2>
+          <h2 class="text-lg text-secondary">Samuel Safahi</h2>
           <h3 class="text-sm text-slate-500">Project Manager</h3>
         </div>
       </div>
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-gray-800">BigWang Gary</h2>
+          <h2 class="text-lg text-secondary">BigWang Gary</h2>
           <h3 class="text-sm text-slate-500">Lead Technician</h3>
         </div>
       </div>
