--- a/src/components/pricing.astro
+++ b/src/components/pricing.astro
@@ -27,7 +27,7 @@ const { plan } = Astro.props;
     </div><ul class="grid mt-8 text-left gap-y-4">
       {
         plan.features.map((item) => (
-          <li class="flex items-start gap-3 text-gray-800">
+          <li class="flex items-start gap-3 text-secondary">
             <Tick class="w-6 h-6" />
             <span>{item}</span>
           </li>
