--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -23,10 +23,10 @@ const sizes = {
 };
 
 const styles = {
-  outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
+  outline: "bg-white border-2 border-black hover:bg-accent text-black ",
   primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
   inverted: "bg-white text-black   border-2 border-transparent",
-  muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
+  muted: "bg-accent hover:bg-gray-200   border-2 border-transparent",
 };
 ---
 
