--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -29,7 +29,7 @@ const menuitems = [
   },
   {
     title: "Testimonials",
-    path: "/testimonial",
+    path: "/testimonials",
   },
   {
     title: "Services",
