--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -55,11 +55,10 @@ const menuitems = [
   <header class="flex flex-col lg:flex-row justify-between items-center my-5">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
-        <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
-          >
-        </a>
+        <a href="/" class="text-lg">
+  <span class="font-bold text-slate-800">Green Grove</span><span class="text-slate-500"> Construction</span>
+</a>
+
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-secondary" />
         </div>
