--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Sectionhead from "@components/sectionhead.astro";
 
 // Modify this to reflect your company's background and mission
 const aboutDescription = `
-  With over 10 years of experience, Green Grove Construction has been providing top-notch construction, landscaping, and fencing services in Santa Barbara County. Our team is dedicated to delivering excellence in every project, with a focus on quality, reliability, and customer satisfaction. From residential renovations to commercial builds, we bring our expertise and passion to every task.
+  With over 10 years of experience, Walker and Cole Construction has been providing top-notch construction, landscaping, and fencing services in Santa Barbara County. Our team is dedicated to delivering excellence in every project, with a focus on quality, reliability, and customer satisfaction. From residential renovations to commercial builds, we bring our expertise and passion to every task.
 `;
 ---
 
