--- a/src/pages/testimonials.astro
+++ b/src/pages/testimonials.astro
@@ -5,7 +5,7 @@ import Container from "@components/container.astro";
 export const testimonials = [
   {
     name: "John Smith",
-    feedback: "Green Grove Construction transformed my backyard! Their team was professional, and the quality of their work was exceptional.",
+    feedback: "Walker and Cole Construction transformed my backyard! Their team was professional, and the quality of their work was exceptional.",
     location: "Santa Barbara, CA"
   },
   {
