--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -56,7 +56,7 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg">
-  <span class="font-bold text-slate-800">Green Grove</span><span class="text-slate-500"> Construction</span>
+  <span class="font-bold text-slate-800">Walker and Cole</span><span class="text-slate-500"> Construction</span>
 </a>
         <div class="block lg:hidden">
           <MenuIcon class="w-4 h-4 text-secondary" />
