--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,8 +4,8 @@
     <p class="mt-2">Your trusted partner for quality fencing and construction services in Santa Barbara County.</p>
     
     <div class="mt-4">
-      <p>Email: <a href="mailto:info@greengroveconstruction.com" class="text-green-400 hover:text-green-300">info@greengroveconstruction.com</a></p>
-      <p>Phone: <a href="tel:+1234567890" class="text-green-400 hover:text-green-300">+1 (234) 567-890</a></p>
+      <p>Email: <a href="mailto:info@walker-cole.com" class="text-green-400 hover:text-green-300">info@walker-cole.com</a></p>
+      <p>Phone: <a href="tel:+1-805-395-9517" class="text-green-400 hover:text-green-300">+1 (805) 395-9517</a></p>
       <p>Address: 1234 Green Grove Lane, Santa Barbara, CA</p>
     </div>
 
