--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,18 +34,18 @@ const makeTitle = title
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="Walker and Cole Construction offers high-quality fencing, landscaping, and construction services in Santa Barbara County."
+      description="Walker and Cole Construction offers high-quality contracting, landscaping, and construction services in Santa Barbara County."
       canonical={canonicalURL}
       twitter={{
-        creator: "@GreenGroveConstruction", // Replace with your actual Twitter handle
-        site: "@GreenGroveConstruction",    // Replace with your actual Twitter handle
+        creator: "@Walker-ColeConstruction", // Replace with your actual Twitter handle
+        site: "@Walker-ColeConstruction",    // Replace with your actual Twitter handle
         card: "summary_large_image",
       }}
       openGraph={{
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Walker and Cole Construction - Quality Fencing & Landscaping Services`,
+          title: `Walker and Cole Construction - Quality Contracting & Landscaping Services`,
           image: resolvedImageWithDomain,
         },
         image: {
