--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,19 +25,19 @@ const aboutDescription = `
     <div class="grid md:grid-cols-3 gap-10 mx-auto max-w-4xl mt-12">
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-secondary">Joaquin Gutierrez</h2>
+          <h2 class="text-lg text-secondary">Samuel Safahi</h2>
           <h3 class="text-sm text-slate-500">Founder & CEO</h3>
         </div>
       </div>
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-secondary">Samuel Safahi</h2>
+          <h2 class="text-lg text-secondary">Zachary Lakin</h2>
           <h3 class="text-sm text-slate-500">Project Manager</h3>
         </div>
       </div>
       <div class="group">
         <div class="text-center">
-          <h2 class="text-lg text-secondary">BigWang Gary</h2>
+          <h2 class="text-lg text-secondary">Dominic Gary</h2>
           <h3 class="text-sm text-slate-500">Lead Technician</h3>
         </div>
       </div>
