--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -24,12 +24,12 @@ import Link from "@components/ui/link.astro";
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
-        href="#contact"
+        href="contact"
         class="bg-primary text-white px-6 py-3 rounded-full font-bold inline-block hover:bg-green-800 transition duration-300">
         Request a Quote
       </Link>
       <Link
-        href="#services"
+        href="services"
         class="border border-green-700 text-green-700 px-6 py-3 rounded-full font-bold inline-block hover:bg-green-100 transition duration-300">
         View Our Services
       </Link>
