--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import heroImage from "assets/hero.png"; // Ensure this points to an image that represents your construction business
+import heroImage from "assets/construction.svg"; // Ensure this points to an image that represents your construction business
 import Link from "@components/ui/link.astro";
 ---
 
