--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,14 +5,15 @@ import Link from "@components/ui/link.astro";
 ---
 
 <main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
+  <div class="py-6 md:order-1 hidden md:block max-w-md mx-auto">
     <Picture
       src={heroImage}
       alt="Walker and Cole Construction at work"
       widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
+      sizes="(max-width: 800px) 100vw, 50vw"
       loading="eager"
       format="avif"
+      class="w-full h-auto"
     />
   </div>
   <div>
