--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -13,7 +13,7 @@ import Link from "@components/ui/link.astro";
       sizes="(max-width: 800px) 100vw, 50vw"
       loading="eager"
       format="avif"
-      class="w-full h-auto"
+      class="w-full h-auto max-h-[300px]"
     />
   </div>
   <div>
