--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -18,7 +18,7 @@ import Link from "@components/ui/link.astro";
   </div>
   <div>
     <h1 class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Transforming Your Space with Quality Fencing & Construction
+      Comprehensive Home Services & Construction
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
       At Walker and Cole Construction, we bring your vision to life with expert craftsmanship and reliable service. Serving Santa Barbara County, we specialize in fences, custom construction, and more.
