--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -4,7 +4,7 @@ import heroImage from "assets/construction.svg"; // Ensure this points to an ima
 import Link from "@components/ui/link.astro";
 ---
 
-<main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24 bg-gray-100">
+<main class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block max-w-md mx-auto">
     <Picture
       src={heroImage}
